Fixed bug on thick borders
The "row" class have border styles applied, which caused overlapping
borders, causing thick borders.

Border styles on the "row" class have been removed.

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,6 @@
 
 .row {
     display: flex;
-    border-style: solid;
-    border-color: black;
     flex: 1;
 }
 
